--- a/src/index.wxml
+++ b/src/index.wxml
@@ -1,2 +1,3 @@
-<view class="index other">{{prop}}-{{flag}}</view>
-<other></other>
+<view>New Page</view>
+<button type="primary">121</button>
+<my-tag></my-tag>
